crates/vaab-vm/tests/snapshots/errors__a_difference_too_small_for_a_whole_number.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "stops(\"let small = -9_223_372_036_854_775_807\\nprint(small - 2)\\n\")"
---
[integer-overflow] Error: this difference does not fit in an Int
   ╭─[ example.vaab:2:7 ]
   │
 2 │ print(small - 2)
   │       ────┬────  
   │           ╰────── this went past what an Int can hold
   │ 
   │ Help: an Int is 64 bits, so it holds whole numbers from -9223372036854775808 to 9223372036854775807
   │ 
   │ Note: Vaab checks every calculation rather than quietly wrapping round
───╯
