crates/vaab-vm/tests/snapshots/errors__a_fault_deep_in_a_program_names_every_call_that_led_to_it.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: rendered
---
[divide-by-zero] Error: this divides by zero
   ╭─[ example.vaab:1:36 ]
   │
 1 │ to innermost(n: Int) returns Int = n / 0
   │                                    ──┬──  
   │                                      ╰──── the right-hand side is 0
   │ 
   │ Help: check the divisor first, as in `if count != 0 { ... }`
───╯
Trace:
  in `innermost` at example.vaab:1:36
  in `middle` at example.vaab:2:33
  in `outermost` at example.vaab:3:36
  in the top level at example.vaab:4:7
