crates/vaab-vm/tests/snapshots/errors__a_fault_inside_a_closure_says_it_was_inside_a_closure.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "stops(\"let none = 0\\nprint([1, 2].map(n -> n / none))\\n\")"
---
[divide-by-zero] Error: this divides by zero
   ╭─[ example.vaab:2:23 ]
   │
 2 │ print([1, 2].map(n -> n / none))
   │                       ────┬───  
   │                           ╰───── the right-hand side is 0
   │ 
   │ Help: check the divisor first, as in `if count != 0 { ... }`
───╯
Trace:
  in a closure at example.vaab:2:23
  in the top level at example.vaab:2:7
