crates/vaab-vm/tests/snapshots/errors__a_function_that_calls_itself_for_ever.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: rendered
---
[too-many-calls] Error: too many calls inside one another
   ╭─[ example.vaab:1:34 ]
   │
 1 │ to forever(n: Int) returns Int = forever(n + 1)
   │                                  ───────┬──────  
   │                                         ╰──────── this call is 10000 deep
   │ 
   │ Help: a function that calls itself needs a case that stops it
   │ 
   │ Note: Vaab stops here so that runaway recursion is a report rather than a crash
───╯
Trace:
  in `forever` at example.vaab:1:34
  in `forever` at example.vaab:1:34
  in `forever` at example.vaab:1:34
  in `forever` at example.vaab:1:34
  in `forever` at example.vaab:1:34
  in `forever` at example.vaab:1:34
  ... 9991 more calls ...
  in `forever` at example.vaab:1:34
  in `forever` at example.vaab:1:34
  in the top level at example.vaab:2:7
