crates/vaab-vm/tests/snapshots/errors__a_negation_that_has_no_answer.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "stops(\"let smallest = -9_223_372_036_854_775_807 - 1\\nprint(-smallest)\\n\")"
---
[integer-overflow] Error: this negation does not fit in an Int
   ╭─[ example.vaab:2:7 ]
   │
 2 │ print(-smallest)
   │       ────┬────  
   │           ╰────── this went past what an Int can hold
   │ 
   │ Help: an Int is 64 bits, so it holds whole numbers from -9223372036854775808 to 9223372036854775807
   │ 
   │ Note: Vaab checks every calculation rather than quietly wrapping round
───╯
