crates/vaab-vm/tests/snapshots/errors__a_sum_too_large_for_a_whole_number.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: rendered
---
[integer-overflow] Error: this sum does not fit in an Int
   ╭─[ example.vaab:2:7 ]
   │
 2 │ print(big + 1)
   │       ───┬───  
   │          ╰───── this went past what an Int can hold
   │ 
   │ Help: an Int is 64 bits, so it holds whole numbers from -9223372036854775808 to 9223372036854775807
   │ 
   │ Note: Vaab checks every calculation rather than quietly wrapping round
───╯
